Minor bugfix: Added z-index: 100 to the navbar dropdown menu. Issue caused by tags/categories being positioned absolute also.

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -55,6 +55,8 @@ summary::-webkit-details-marker { /* for Chrome */
     cursor: default;
 
     right: 0;
+
+    z-index: 100;
 }
 
 .dropdown-menu-ul {
